--- a/index.html
+++ b/index.html
@@ -3,17 +3,169 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+   
     <title>My-portfolio</title>
+    <link rel="stylesheet" href="style/portfolio.css">
 </head>
-<body>
-    <header>
+<body class="open-sans-normal">
+    <header class="header secondary-bg">
+        <nav>
+            <h3 class="nav-title">Ha<span class="text-primary">s</span>an</h3>
+            <ul>
+                <li><a class="dark-2" href="">Portfolio</a> </li>
+                <li><a class="dark-2" href="">Blog</a> </li>
+                <li><a href=""><button class="btn-primary">Hire me</button></a> </li>
+            </ul>
+        </nav>
 
+       <div class="banner">
+           <div class="banner-conten">
+            <h4 class="dark-2" class="banner-greetings">Hi,I am</h4>
+            <h1 class="banner-titles">Md Abul hasan</h1>
+            <p class="banner-description">
+                I am a competitive programmer.I want to be a web developer.<br>So I try to my best for this side.
+                I am a student of Dhaka International University <br> at Department of computer of science and
+                Engineering.<br>Now I am a third year student.
+            </p>
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
+           </div>
+           <img class="banner-profile-pic" src="Portfolio/portfolio-resources/images/hasan.jpg" alt="">
+       </div>
     </header>
     <main>
+         <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+             I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our meta.
+          </p>
+          <div class="about-items">
+            <about-item>
+                <p class="item-title">Name</p>
+                <p class="item-description">Md Abul hasan</p>
+            </about-item>
+            <about-item>
+                <p class="item-title">email</p>
+                <p class="item-description">hasan7se@gmail.com</p>
+            </about-item>
+            <about-item>
+                <p class="item-title">Date of birth</p>
+                <p class="item-description">29 December,2000</p>
+            </about-item>
+            <about-item>
+                <p class="item-title">From</p>
+                <p class="item-description">Cantonment Dhaka</p>
+            </about-item>
+          </div>
+         </section>
 
+         <section class="skills">
+            <h3 class="section-title text-center">What I do</h3>
+            <p class="section-description text-center">
+                I have more than 3 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+            </p>
+
+            <div class="skill-container">
+                <skill>
+                    <img src="Portfolio/portfolio-resources/images/icons/js.png" alt="">
+                    <h4 class="skill-title">Vanilla JavaScript</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </skill>
+                <skill>
+                    <img src="Portfolio/portfolio-resources/images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </skill>
+                <skill>
+                    <img src="Portfolio/portfolio-resources/images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </skill>
+                <skill>
+                    <img src="Portfolio/portfolio-resources/images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </skill>
+            </div>
+         </section>
+         
+         <section class="resume">
+            <h3 class="section-title text-center">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                            <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                            <experience-description>List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</experience-description>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                            <h5 class="experience-sub-title">Master in Computer Engineering</h5>
+                            <experience-description>List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</experience-description>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                            <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                            <experience-description>List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</experience-description>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                            <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                            <experience-description>List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</experience-description>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Jr. Font End Developer</h4>
+                            <h5 class="experience-sub-title">Dribbble Inc / 2018 - 2022</h5>
+                            <experience-description>List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</experience-description>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">HTML Developer</h4>
+                            <h5 class="experience-sub-title">Adobe Inc / 2017 - 2018</h5>
+                            <experience-description>List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</experience-description>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center resume-download-cv">
+              <button class="btn-primary">Download CV</button>
+            </div>
+         </section>
     </main>
-    <footer>
-        
+    <footer class="secondary-bg">
+       <div class="footer-column">
+          <h3 class="section-title">Lets connect me</h3>
+          <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+          <div>
+            <a href=""><img src="Portfolio/portfolio-resources/images/icons/facebook.png"></a>
+            <a href=""><img src="Portfolio/portfolio-resources/images/icons/insta.png"></a>
+            <a href=""><img src="Portfolio/portfolio-resources/images/icons/twitter.png"></a>
+          </div>
+       </div>
+       <div class="footer-column">
+         <h3 class="section title">Lets Inbox me</h3>
+         <form action="">
+            <input type="text" name="" id="" placeholder="Your Name">
+            <input type="email" name="" id="" placeholder="Your email">
+            <textarea name="" id="" cols="30" rows="20" placeholder="Message"></textarea>
+            <input class="btn-primary" type="submit" value="submit">
+         </form>
+       </div>
     </footer>
 </body>
 </html>
