--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    
     <title>My-portfolio</title>
     <link rel="stylesheet" href="style/portfolio.css">
+    <script src="https://kit.fontawesome.com/586258aecb.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -30,8 +31,8 @@
                 I am a student of Dhaka International University <br> at Department of computer of science and
                 Engineering.<br>Now I am a third year student.
             </p>
-            <button class="btn-primary">Download CV</button>
-            <button class="btn-primary">Contact</button>
+            <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+            <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
            </div>
            <img class="banner-profile-pic" src="Portfolio/portfolio-resources/images/hasan.jpg" alt="">
        </div>
@@ -143,7 +144,7 @@
                 </div>
             </div>
             <div class="text-center resume-download-cv">
-              <button class="btn-primary">Download CV</button>
+              <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
          </section>
     </main>
