--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
    
     <title>My-portfolio</title>
     <link rel="stylesheet" href="style/portfolio.css">
-    <script src="https://kit.fontawesome.com/586258aecb.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -31,10 +30,10 @@
                 I am a student of Dhaka International University <br> at Department of computer of science and
                 Engineering.<br>Now I am a third year student.
             </p>
-            <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
-            <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
            </div>
-           <img class="banner-profile-pic" src="Portfolio/portfolio-resources/images/hasan.jpg" alt="">
+           <img class="banner-profile-pic" src="Portfolio/portfolio-resources/images/80851809_451420692472727_4329883833928253440_n.jpggit" alt="">
        </div>
     </header>
     <main>
@@ -144,7 +143,7 @@
                 </div>
             </div>
             <div class="text-center resume-download-cv">
-              <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+              <button class="btn-primary">Download CV</button>
             </div>
          </section>
     </main>
