--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button class="btn-primary">Download CV</button>
             <button class="btn-primary">Contact</button>
            </div>
-           <img class="banner-profile-pic" src="Portfolio/portfolio-resources/images/80851809_451420692472727_4329883833928253440_n.jpggit" alt="">
+           <img class="banner-profile-pic" src="Portfolio/portfolio-resources/images/hardy.png" alt="">
        </div>
     </header>
     <main>
