--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button class="btn-primary">Download CV</button>
             <button class="btn-primary">Contact</button>
            </div>
-           <img class="banner-profile-pic" src="Portfolio/portfolio-resources/images/hardy.png" alt="">
+           <img class="banner-profile-pic" src="images/hasan.jpg" alt="">
        </div>
     </header>
     <main>
@@ -70,22 +70,22 @@
 
             <div class="skill-container">
                 <skill>
-                    <img src="Portfolio/portfolio-resources/images/icons/js.png" alt="">
+                    <img src="images/icons/js.png" alt="">
                     <h4 class="skill-title">Vanilla JavaScript</h4>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </skill>
                 <skill>
-                    <img src="Portfolio/portfolio-resources/images/icons/react.png" alt="">
+                    <img src="images/icons/react.png" alt="">
                     <h4 class="skill-title">React</h4>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </skill>
                 <skill>
-                    <img src="Portfolio/portfolio-resources/images/icons/nodejs.png" alt="">
+                    <img src="images/icons/nodejs.png" alt="">
                     <h4 class="skill-title">Node.js</h4>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </skill>
                 <skill>
-                    <img src="Portfolio/portfolio-resources/images/icons/mongo.png" alt="">
+                    <img src="images/icons/mongo.png" alt="">
                     <h4 class="skill-title">MongoDB</h4>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </skill>
@@ -152,9 +152,9 @@
           <h3 class="section-title">Lets connect me</h3>
           <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
           <div>
-            <a href=""><img src="Portfolio/portfolio-resources/images/icons/facebook.png"></a>
-            <a href=""><img src="Portfolio/portfolio-resources/images/icons/insta.png"></a>
-            <a href=""><img src="Portfolio/portfolio-resources/images/icons/twitter.png"></a>
+            <a href=""><img src="images/icons/facebook.png"></a>
+            <a href=""><img src="images/icons/insta.png"></a>
+            <a href=""><img src="images/icons/twitter.png"></a>
           </div>
        </div>
        <div class="footer-column">
